--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -7,7 +7,8 @@
 #
 theme            : template
 
-theme-background : [ "#000000" ]
+# theme-background : [ "#000000" ]
+theme-background : [ "#0F2862" ]
 theme-headline   : [ "Montserrat", "#FBD95E", "none", "#FFFFFF", "100", "120", "15" ]
 theme-byline     : [ "Raleway", "#FFFFFF", "none", "#FBD95E", "100", "110", "15" ]
 theme-text       : [ "Source Sans Pro", "#FFFFFF", "none", "#A0C865", "100", "100", "15" ]
@@ -33,7 +34,7 @@ theme-override: assets/css/PITCHME.css
 # Logo Setting
 # https://gitpitch.com/docs/settings/logo
 #
-logo : assets/img/logo.png
+logo : assets/img/fitu-logo-transparent-back.png
 logo-position : top-left
 
 #
